--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
-
+     <!--  Семенишин Павло       -->
     <!-- Лісничук Арсен -->
 
     <!-- Turkevych Vitalii -->
