updated index html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!-- Turkevych Vitalii -->
 
+
+    <!-- Вівчаренко Михайло -->
+
     <header>
         <h1>Team Template</h1>
     </header>
