--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Лісничук Арсен -->
 
     <!-- Turkevych Vitalii -->
+    <!-- Olkhovyk Anastasiia -->
 
     <header>
         <h1>Team Template</h1>
