--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
     </header>
     <main>
 
+        <!-- Tastes Turkevych Vitalii -->
+
+        <section class="tastes">
+            <div class="tastes__text">
+                <h2 class="text__title">Ice cream tastes</h2>
+                <p class="text__sub-title">Select Your Favorite Taste</p>
+                <p class="text__we-have">From strawberry to coconut, we have them all!</p>
+            </div>
+
+            <div class="tastes__cards">
+                <div class="card__ice-cream">
+                    <img src="img/strawberry-ice-cream.png" alt="strawberry-ice-cream">
+                    <h3 class="ice-cream__name">Strawberry Gem</h3>
+                    <p class="ice-cream__description">fruity and fresh</p>
+                </div>
+                <div class="card__ice-cream">
+                    <img src="img/choco-ice-cream.png" alt="choco-ice-cream">
+                    <h3 class="ice-cream__name">Strawberry Gem</h3>
+                    <p class="ice-cream__description">fruity and fresh</p>
+                </div>
+                <div class="card__ice-cream">
+                    <img src="img/blueberry-ice-cream.png" alt="blueberry-ice-cream">
+                    <h3 class="ice-cream__name">Strawberry Gem</h3>
+                    <p class="ice-cream__description">fruity and fresh</p>
+                </div>
+                <div class="card__ice-cream">
+                    <img src="img/mongo-ice-cream.png" alt="mongo-ice-cream">
+                    <h3 class="ice-cream__name">Strawberry Gem</h3>
+                    <p class="ice-cream__description">fruity and fresh</p>
+                </div>
+            </div>
+            <a href="more-ice-cream">Show Me More</a>
+        </section>
 
     </main>
     <footer>
