Fixed the error with the link 'show me more'

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="ice-cream__description">fruity and fresh</p>
                 </div>
             </div>
-            <a href="more-ice-cream">Show Me More</a>
+            <a href="">Show Me More</a>
         </section>
 
     </main>
