--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="ice-cream__description">fruity and fresh</p>
                 </div>
             </div>
-            <a href="">Show Me More</a>
+            <a href="https://93qs8.weblium.site/menu">Show Me More</a>
         </section>
 
     </main>
