--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    
+
     <!-- Семенишин Павло -->
     <!-- Lisnychuk Arsen -->
     <!-- Turkevych Vitalii -->
@@ -24,6 +24,40 @@
         <h1>Team Template</h1>
     </header>
     <main>
+
+        <!-- Pavlo  Semenyshyn-->
+        <section class="overview-menu">
+            <div class="overview-desserts">
+                <h3>Desserts</h3>
+
+                <button class="dessert-button">
+                    View Menu
+                </button>
+
+
+            </div>
+            <div class="milk-shakes">
+                <h3>Milk Shakes</h3>
+
+                <button class="shakes-button">
+                    View Menu
+                </button>
+
+
+            </div>
+
+            <div class="ice-cream">
+                <h3>Ice Cream</h3>
+
+                <butoon class="ice-cream">
+                    View Menu
+                </butoon>
+
+            </div>
+        </section>
+
+
+
 
         <!-- Tastes Turkevych Vitalii -->
 
