--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div class="ice-cream">
                 <h3>Ice Cream</h3>
                 <form action="#">
-                    <butoon class="ice-cream">
+                    <button class="ice-cream">
                         View Menu
-                    </butoon>
+                    </button>
                 </form>
             </div>
         </section>
