moved the photos to the tastes folder

--- a/index.html
+++ b/index.html
@@ -70,24 +70,28 @@
 
             <div class="tastes__cards">
                 <div class="card__ice-cream">
-                    <img src="img/strawberry-ice-cream.png" alt="strawberry-ice-cream">
+                    <img src="img/tastes/strawberry-ice-cream.png" alt="strawberry-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
+                    <p class="ice-cream__price">$ 5 / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/choco-ice-cream.png" alt="choco-ice-cream">
+                    <img src="img/tastes/choco-ice-cream.png" alt="choco-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
+                    <p class="ice-cream__price">$ 5 / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/blueberry-ice-cream.png" alt="blueberry-ice-cream">
+                    <img src="img/tastes/blueberry-ice-cream.png" alt="blueberry-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
+                    <p class="ice-cream__price">$ 5 / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/mongo-ice-cream.png" alt="mongo-ice-cream">
+                    <img src="img/tastes/mongo-ice-cream.png" alt="mongo-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
+                    <p class="ice-cream__price">$ 5 / ball</p>
                 </div>
             </div>
             <a href="https://93qs8.weblium.site/menu">Show Me More</a>
