--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    
+
     <!-- Семенишин Павло -->
     <!-- Lisnychuk Arsen -->
     <!-- Turkevych Vitalii -->
@@ -59,6 +59,45 @@
             <a href="https://93qs8.weblium.site/menu">Show Me More</a>
         </section>
 
+        <!-- Mykhailo Popovych-->
+
+        <section class="blog">
+            <div class="blog__text">
+                <h2 class="blog__title">Blog</h2>
+                <p class="blog__subtitle">Our Latest Articles</p>
+                <p class="blog__advice">Learn more about ice cream, our news, and special offers.</p>
+            </div>
+
+            <div class="blog__acticles-overview">
+                <div class="blog__article">
+                    <img src="img/blog/ice-cream-balls.png" alt="Tasty ice cream">
+                    <h3 class="blog__article-title">-15% Discount on 10 Tastes!</h3>
+                    <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top spring
+                        tastes until 10 june</p>
+                    <div class="blog__btn">
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="blog__article">
+                    <img src="img/blog/ice-cream-enjoy.png" alt="People enjoing ice cream">
+                    <h3 class="blog__article-title">The History of Ice Cream</h3>
+                    <p class="blog__article-text">Many people know that the original ice cream comes from Italy. Here is
+                        the whole story...</p>
+                    <div class="blog__btn">
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="blog__article">
+                    <img src="img/blog/ice-cream-balls.png" alt="Ice cream composition">
+                    <h3 class="blog__article-title">Celebrate Birthdays with us!</h3>
+                    <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We have
+                        lots of sweet threats and fun.</p>
+                    <div class="blog__btn">
+                        <a href="#">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
