add a grid in the menu section (drinks)

--- a/index.html
+++ b/index.html
@@ -210,7 +210,34 @@
                         </div>
                     </div>
                     <div class="grid__drinks cards">
-
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/strawberry.png" alt="Strawberry image" class="cards__card-img">
+                            <p class="cards__card-name">Strawberry / <span class="price">$10</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/caramel.png" alt="Caramel image" class="cards__card-img">
+                            <p class="cards__card-name">Caramel / <span class="price">$8</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/berry-shake.png" alt="Berry Shake image" class="cards__card-img">
+                            <p class="cards__card-name">Berry Shake / <span class="price">$12</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/mango-shake.png" alt="Mango Shake image" class="cards__card-img">
+                            <p class="cards__card-name">Mango Shake / <span class="price">$8</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/orange-shake.png" alt="Orange Shake image" class="cards__card-img">
+                            <p class="cards__card-name">Orange Shake / <span class="price">$9</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/banana-shake.png" alt="Banana Shake image" class="cards__card-img">
+                            <p class="cards__card-name">Banana Shake / <span class="price">$8</span></p>
+                        </div>
+                        <div class="cards__card">
+                            <img src="img/menu/drinks/ice-latte.png" alt="Ice Latte image" class="cards__card-img">
+                            <p class="cards__card-name">Ice Latte / <span class="price">$10</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
