header+main page,shortcut icon and title

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <title>Ice Cream Cafe Website</title>
+    <link rel="shortcut icon" type="image/png" href="//res2.weblium.site/res/628497bfc848a40022c2e3dc/6299b64bfa542500238435df_optimized" sizes="96x96">
 </head>
 
 <body>
@@ -20,10 +20,32 @@
     <!-- Вівчаренко Михайло -->
     <!--Михайло Попович-->
 
-    <header>
-        <h1>Team Template</h1>
+<!-- Olkhovyk Anastasiia -->
+    <header class="header" >
+        <nav class="header__nav">
+            <a href="#" class="header__nav-item">About us</a>
+            <a href="#" class="header__nav-item">Menu</a>
+            <a href="#" class="header__nav-item">Special</a>
+            <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+            <a href="#" class="header__nav-item">Ingredients</a>
+            <a href="#" class="header__nav-item">Blog</a>
+            <a href="#" class="header__nav-item">Contacts</a>
+        </nav>
     </header>
     <main>
+        <section class="main-page">
+            <h1 class="main-page__title">Welcome to<br>
+                Mr. Snowman Cafe
+            </h1>
+            <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
+            </p>
+            <div class="main-page__about-cafe-button">
+                <a href="#" class="button-link">About Cafe</a>
+            </div>
+            <div class="main-page__our-menu-button">
+                <a href="#our-menu" class="button-link">Our Menu</a>
+            </div>
+        </section>
 
 
 
