--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Cafe Website</title>
-    <link rel="shortcut icon" type="image/png" href="//res2.weblium.site/res/628497bfc848a40022c2e3dc/6299b64bfa542500238435df_optimized" sizes="96x96">
+    <link rel="shortcut icon" type="image/png" href="https://res2.weblium.site/res/628497bfc848a40022c2e3dc/6299b64bfa542500238435df_optimized" sizes="96x96">
 </head>
 
 <body>
