added id to ingredients

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
         
         <!-- Вівчаренко Михайло --> 
-        <section class="ingredients">
+        <section id="Ingredients" class="ingredients">
             <img class="ingredients__image" width="300" src="img/ice-cream-ingredients.png" alt="ice-cream-ingredients">
             
                 <h2 class="ingredients__title">Ingredients</h2>
