--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <!-- Mykhailo Popovych-->
 
-        <section class="blog">
+        <section class="blog" id="our-blog">
             <div class="blog__text">
                 <h2 class="blog__title">Blog</h2>
                 <p class="blog__subtitle">Our Latest Articles</p>
