--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Михайло Попович-->
 
 <!-- Olkhovyk Anastasiia -->
-    <header class="header" >
+    <header class="header">
         <nav class="header__nav">
             <a href="#" class="header__nav-item">About us</a>
             <a href="#" class="header__nav-item">Menu</a>
@@ -34,7 +34,7 @@
     </header>
     <main>
         <section class="main-page">
-            <h1 class="main-page__title">Welcome to<br>
+            <h1 class="main-page__title"><span>Welcome to</span>
                 Mr. Snowman Cafe
             </h1>
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
