--- a/index.html
+++ b/index.html
@@ -98,25 +98,25 @@
                     <img src="img/tastes/strawberry-ice-cream.png" alt="strawberry-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price">$ 5 / ball</p>
+                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
                     <img src="img/tastes/choco-ice-cream.png" alt="choco-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price">$ 5 / ball</p>
+                    <p class="ice-cream__price"><span>$ 5 </span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
                     <img src="img/tastes/blueberry-ice-cream.png" alt="blueberry-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price">$ 5 / ball</p>
+                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
                     <img src="img/tastes/mongo-ice-cream.png" alt="mongo-ice-cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price">$ 5 / ball</p>
+                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
             </div>
             <a href="https://93qs8.weblium.site/menu">Show Me More</a>
