--- a/index.html
+++ b/index.html
@@ -264,6 +264,40 @@
                 </div>
             </div>
         </section>
+        <!-- Reznik Anastasiia -->
+        <section class="about-us" id="about-us">
+                <h2 class="about-us__title">About Us</h2>
+                <p class="about-us__sub-title">Our Story</p>
+                <p class="about-us__text">Our mission is to offer the best experience and the tastiest desserts to our clients.</p>
+                <p class="about-us__text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been handcrafting the most delicious 
+                        ice cream since 1999, and these days, our menu is more varied than ever before. Come to us to enjoy 
+                        various ice cream flavors and try our seasonal and holiday desserts and drinks.</p>
+             <div class="about-us__cards cards">
+                <div class="cards__experience">
+                    <img class="cards__images" src="img/shop-logo.svg" alt="Shop Logo">
+                    <h3 class="cards__title">20+</h3>
+                    <p class="cards__text">Years of experience</p>
+                </div>
+                <div class="cards__experience">
+                    <img class="cards__images" src="img/clerk.svg" alt="Clerk Logo">
+                    <h3 class="cards__title">25</h3>
+                    <p class="cards__text">Professional ice cream makers</p>
+                </div>
+                <div class="cards__experience">
+                    <img class="cards__images" src="img/ice-cream-logo.svg" alt="Ice Cream Logo">
+                    <h3 class="cards__title">18+</h3>
+                    <p class="cards__text">Ice cream shops in New York</p>
+                </div>
+                <div class="cards__experience">
+                    <img class="cards__images" src="img/tastes-logo.svg" alt="Tastes Logo">
+                    <h3 class="cards__title">50</h3>
+                    <p class="cards__text">Great tastes of ice cream</p>
+                </div>
+             </div>
+
+        
+        
+
 
         <!-- Mykhailo Popovych-->
 
