--- a/index.html
+++ b/index.html
@@ -274,26 +274,28 @@
                         various ice cream flavors and try our seasonal and holiday desserts and drinks.</p>
              <div class="about-us__cards cards">
                 <div class="cards__experience">
-                    <img class="cards__images" src="img/shop-logo.svg" alt="Shop Logo">
+                    <img class="cards__images" src="img/about us/shop-logo.svg" alt="Shop Logo">
                     <h3 class="cards__title">20+</h3>
                     <p class="cards__text">Years of experience</p>
                 </div>
                 <div class="cards__experience">
-                    <img class="cards__images" src="img/clerk.svg" alt="Clerk Logo">
+                    <img class="cards__images" src="img/about us/clerk.svg" alt="Clerk Logo">
                     <h3 class="cards__title">25</h3>
                     <p class="cards__text">Professional ice cream makers</p>
                 </div>
                 <div class="cards__experience">
-                    <img class="cards__images" src="img/ice-cream-logo.svg" alt="Ice Cream Logo">
+                    <img class="cards__images" src="img/about us/ice-cream-logo.svg" alt="Ice Cream Logo">
                     <h3 class="cards__title">18+</h3>
                     <p class="cards__text">Ice cream shops in New York</p>
                 </div>
                 <div class="cards__experience">
-                    <img class="cards__images" src="img/tastes-logo.svg" alt="Tastes Logo">
+                    <img class="cards__images" src="img/about us/tastes-logo.svg" alt="Tastes Logo">
                     <h3 class="cards__title">50</h3>
                     <p class="cards__text">Great tastes of ice cream</p>
                 </div>
              </div>
+        </section>
+
 
         
         
