--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#" class="header__nav-item">Special</a>
             <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
             <a href="#Ingredients" class="header__nav-item">Ingredients</a>
-            <a href="#" class="header__nav-item">Blog</a>
+            <a href="#our-blog" class="header__nav-item">Blog</a>
             <a href="#" class="header__nav-item">Contacts</a>
         </nav>
     </header>
