fix id linking to menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#" class="button-link">About Cafe</a>
             </div>
             <div class="main-page__our-menu-button">
-                <a href="#our-menu" class="button-link">Our Menu</a>
+                <a href="#menu" class="button-link">Our Menu</a>
             </div>
         </section>
 
