adding left and right divs to header nav

--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
 <!-- Olkhovyk Anastasiia -->
     <header class="header">
         <nav class="header__nav">
-            <a href="#" class="header__nav-item">About us</a>
-            <a href="#" class="header__nav-item">Menu</a>
-            <a href="#" class="header__nav-item">Special</a>
-            <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
-            <a href="#Ingredients" class="header__nav-item">Ingredients</a>
-            <a href="#our-blog" class="header__nav-item">Blog</a>
-            <a href="#" class="header__nav-item">Contacts</a>
+            <div class="header__nav-left">
+                <a href="#" class="header__nav-item">About us</a>
+                <a href="#" class="header__nav-item">Menu</a>
+                <a href="#" class="header__nav-item">Special</a>
+            </div>
+            <div class="header__nav-image">
+                <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
+            </div>
+            <div class="header__nav-right">
+                <a href="#Ingredients" class="header__nav-item">Ingredients</a>
+                <a href="#our-blog" class="header__nav-item">Blog</a>
+                <a href="#" class="header__nav-item">Contacts</a>
+            </div>
         </nav>
     </header>
     <main>
@@ -129,7 +135,6 @@
                 <h2 class="ingredients__title">Ingredients</h2>
                 <p class="ingredients__subtitle">100% Organic and Natural</p>
                 <p class="ingredients__text">We use only natural ingredients in our ice cream and desserts.</p>
-    
                 <ul class="ingredients__listing">
                     <li class="ingredients__list"> Farm milk from local households;</li>
                     <li class="ingredients__list"> Berry and fruit pieces and whole fruit;</li>
