--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
     <footer>
         <!-- Pavlo Semenyshyn -->
         <div class="footer">
-            <div class="footer__mrsnow">
-                <img src="img/footer/mr-snow-photo.svg" alt="footer__logo">
+            <div class="footer__welcome">
+                <img class="footer__mr-showman" src="img/footer/mr-snow-photo.svg" alt="footer__logo">
                 <p>Welcome to the sweetest place in our city! We offer handcrafted ice cream, desserts, and drinks.</p>
                 <div class="footer__social__links">
                     <a href="#" class="facebook__link">
@@ -361,22 +361,22 @@
                     </a>
                 </div>
             </div>
-            <div class="footer__navigation">
+            <div class="footer__navigation nav">
                 <h3>Navigation</h3>
 
-                <p><a href="#" class="nav__about_us"> About us</a> </p>
+                <p><a href="#" class="nav__about-us">About us</a> </p>
                 <p><a href="#" class="nav__menu">Menu</a> </p>
-                <p><a href="#" class="nav__spec"> Special</a></p>
+                <p><a href="#" class="nav__spec">Special</a></p>
                 <p><a href="#" class="nav__ingredients">Ingredients</a></p>
             </div>
-            <div class="footer__support">
+            <div class="footer__support support">
                 <h3>Help & Support</h3>
-                <p><a href="#" class="footer__blog"> Blog</a></p>
-                <p><a href="#" class="footer__term">Terms & Conditions</a></p>
-                <p><a href="#" class="footer__help">Help</a></p>
-                <p><a href="#" class="footer__contact">Contacts</a></p>
+                <p><a href="#" class="support__blog">Blog</a></p>
+                <p><a href="#" class="support__term">Terms & Conditions</a></p>
+                <p><a href="#" class="support__help">Help</a></p>
+                <p><a href="#" class="support__contact">Contacts</a></p>
             </div>
-            <div class="footer__schedule__booking">
+            <div class="footer__schedule-booking">
                 <h3 class="schedule">Opening Hours</h3>
                 <p class="schedule">Mon – Thu: 10:00 AM – 11 PM</p>
                 <p class="schedule__weekend">
@@ -389,7 +389,7 @@
             <div class="footer__footer">
                 <p> ©Created by Team №4</p>
                 <p>All rights Reserved</p>
-             </div>
+            </div>
         </div>
     </footer>
 </body>
