Fix linking id menu and ingredients

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
             </div>
             <div class="header__nav-right">
-                <a href="#Ingredients" class="header__nav-item">Ingredients</a>
+                <a href="#ingredients" class="header__nav-item">Ingredients</a>
                 <a href="#our-blog" class="header__nav-item">Blog</a>
                 <a href="#" class="header__nav-item">Contacts</a>
             </div>
@@ -122,7 +122,7 @@
         </section>
 
         <!-- Вівчаренко Михайло -->
-        <section class="ingredients">
+        <section class="ingredients" id="ingredients">
             <img class="ingredients__image" width="300" src="img/ingredients/ice-cream-ingredients.png" alt="ice-cream-ingredients">
 
             <h2 class="ingredients__title">Ingredients</h2>
@@ -142,7 +142,7 @@
         </section>
 
         <!-- Menu Arsen Lisnychuk -->
-        <section class="menu" id="our-menu">
+        <section class="menu" id="menu">
             <header class="menu__header header">
                 <h2 class="header__title">Our Menu</h2>
                 <p class="header__sub-title">Featured Desserts & Treats</p>
