Update change header to div

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
     <!-- Вівчаренко Михайло -->
     <!--Михайло Попович-->
 
+    <style>
+        .header {
+            background-color: pink;
+        }
+
+        .menu__header > .header {
+            background-color: blue;
+        }
+
+        .menu__header .header {
+            background-color: blue;
+        }
+    </style>
+
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
         <nav class="header__nav">
@@ -143,11 +157,11 @@
 
         <!-- Menu Arsen Lisnychuk -->
         <section class="menu" id="menu">
-            <header class="menu__header header">
+            <div class="menu__header header">
                 <h2 class="header__title">Our Menu</h2>
                 <p class="header__sub-title">Featured Desserts & Treats</p>
                 <p class="header__text">Welcome to the sweet tooth paradise!</p>
-            </header>
+            </div>
             <div class="menu__tabs">
                 <div class="menu__tabs-nav tabs-nav">
                     <div class="tabs-nav__item">Desserts</div>
