Fix remove style tag

--- a/index.html
+++ b/index.html
@@ -20,20 +20,6 @@
     <!-- Вівчаренко Михайло -->
     <!--Михайло Попович-->
 
-    <style>
-        .header {
-            background-color: pink;
-        }
-
-        .menu__header > .header {
-            background-color: blue;
-        }
-
-        .menu__header .header {
-            background-color: blue;
-        }
-    </style>
-
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
         <nav class="header__nav">
@@ -137,7 +123,8 @@
 
         <!-- Вівчаренко Михайло -->
         <section class="ingredients" id="ingredients">
-            <img class="ingredients__image" width="300" src="img/ingredients/ice-cream-ingredients.png" alt="ice-cream-ingredients">
+            <img class="ingredients__image" width="300" src="img/ingredients/ice-cream-ingredients.png"
+                alt="ice-cream-ingredients">
 
             <h2 class="ingredients__title">Ingredients</h2>
             <p class="ingredients__subtitle">100% Organic and Natural</p>
