--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </form>
             </div>
         </section>
-        
+
         <!-- Tastes Turkevych Vitalii -->
         <section class="tastes">
             <div class="tastes__text">
@@ -299,7 +299,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Mykhailo Popovych-->
         <section class="blog" id="our-blog">
             <div class="blog__text">
@@ -339,11 +339,60 @@
             </div>
         </section>
     </main>
-    <footer>
 
-   </span>
-   
+    <footer>
+        <!-- Pavlo Semenyshyn -->
+        <div class="footer">
+            <div class="footer__mrsnow">
+                <img src="img/footer/mr-snow-photo.svg" alt="">
+                <p>Welcome to the sweetest place in our city! We offer handcrafted ice cream, desserts, and drinks.</p>
+                <div class="footer__social__links">
+                    <a href="#" class="facebook__link">
+                        <img src="#" alt="facebook">
+                    </a>
+                    <a href="#" class="instagram__link">
+                        <img src="#" alt="instagram">
+                    </a>
+                    <a href="#" class="twitter__link">
+                        <img src="#" alt="twitter">
+                    </a>
+                    <a href="#" class="youtube__link">
+                        <img src="#" alt="youtube">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__navigation">
+                <h3>Navigation</h3>
+
+                <p><a href="#" class="nav__about_us"> About us</a> </p>
+                <p><a href="#" class="nav__menu">Menu</a> </p>
+                <p><a href="#" class="nav__spec"> Special</a></p>
+                <p><a href="" class="nav__ingredients">Ingredients</a></p>
+            </div>
+            <div class="footer__support">
+                <h3>Help & Support</h3>
+                <p><a href="#" class="footer__blog"> Blog</a></p>
+                <p><a href="#" class="footer__term">Terms & Conditions</a></p>
+                <p><a href="#" class="footer__help">Help</a></p>
+                <p><a href="#" class="footer__contact">Contacts</a></p>
+            </div>
+            <div class="footer__schedule__booking">
+                <h3 class="schedule">Opening Hours</h3>
+                <p class="schedule">Mon – Thu: 10:00 AM – 11 PM</p>
+                <p class="schedule__weekend">
+                    Sat - Sun : 11:00 AM – 11 PM
+                </p>
+                <h3 class="book">Book a Table</h3>
+                <p class="book__number">+1 (234) 567 89 00</p>
+            </div>
+            <div class="footer__line"></div>
+            <div class="footer__footer">
+                <p> ©Created by Team №4</p>
+                <p>All rights Reserved</p>
+             </div>
+        </div>
     </footer>
 </body>
+
 
 </html>
