--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <!-- Pavlo Semenyshyn -->
         <div class="footer">
             <div class="footer__mrsnow">
-                <img src="img/footer/mr-snow-photo.svg" alt="">
+                <img src="img/footer/mr-snow-photo.svg" alt="footer__logo">
                 <p>Welcome to the sweetest place in our city! We offer handcrafted ice cream, desserts, and drinks.</p>
                 <div class="footer__social__links">
                     <a href="#" class="facebook__link">
@@ -367,7 +367,7 @@
                 <p><a href="#" class="nav__about_us"> About us</a> </p>
                 <p><a href="#" class="nav__menu">Menu</a> </p>
                 <p><a href="#" class="nav__spec"> Special</a></p>
-                <p><a href="" class="nav__ingredients">Ingredients</a></p>
+                <p><a href="#" class="nav__ingredients">Ingredients</a></p>
             </div>
             <div class="footer__support">
                 <h3>Help & Support</h3>
