--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
         
         <!-- Вівчаренко Михайло --> 
-        <section id="Ingredients" class="ingredients">
+        <section id="ingredients" class="ingredients">
             <img class="ingredients__image" width="300" src="img/ingredients/ice-cream-ingredients.png" alt="ice cream ingredients">
             
                 <h2 class="ingredients__title">Ingredients</h2>
