--- a/index.html
+++ b/index.html
@@ -94,27 +94,33 @@
 
             <div class="tastes__cards">
                 <div class="card__ice-cream">
-                    <img src="img/tastes/strawberry-ice-cream.png" alt="strawberry-ice-cream">
+                    <img src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
                     <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/choco-ice-cream.png" alt="choco-ice-cream">
-                    <h3 class="ice-cream__name">Strawberry Gem</h3>
-                    <p class="ice-cream__description">fruity and fresh</p>
+                    <img src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
+                    <h3 class="ice-cream__name">Choco & Hazelnut</h3>
+                    <p class="ice-cream__description">rich sweet taste</p>
                     <p class="ice-cream__price"><span>$ 5 </span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/blueberry-ice-cream.png" alt="blueberry-ice-cream">
-                    <h3 class="ice-cream__name">Strawberry Gem</h3>
-                    <p class="ice-cream__description">fruity and fresh</p>
+                    <img src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
+                    <h3 class="ice-cream__name">Blue Paradise</h3>
+                    <p class="ice-cream__description">sour and fruity</p>
                     <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/mongo-ice-cream.png" alt="mongo-ice-cream">
-                    <h3 class="ice-cream__name">Strawberry Gem</h3>
-                    <p class="ice-cream__description">fruity and fresh</p>
+                    <img src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
+                    <h3 class="ice-cream__name">Mango Dream§</h3>
+                    <p class="ice-cream__description">classic tropic taste</p>
+                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
+                </div>
+                <div class="card__ice-cream">
+                    <img src="img/tastes/cream nutty flavor.png" alt="cream nutty flavor">
+                    <h3 class="ice-cream__name">Pistachio Heaven</h3>
+                    <p class="ice-cream__description">cream nutty flavor</p>
                     <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
             </div>
