change img name, tastes "cream nutty flavor"

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p class="ice-cream__price"><span>$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/cream nutty flavor.png" alt="cream nutty flavor">
+                    <img src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
                     <h3 class="ice-cream__name">Pistachio Heaven</h3>
                     <p class="ice-cream__description">cream nutty flavor</p>
                     <p class="ice-cream__price"><span>$ 5</span> / ball</p>
