Created a css file, and imported tastes.css into it

--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Cafe Website</title>
     <link rel="shortcut icon" type="image/png" href="img/header/shortcut-icon.png" sizes="96x96">
+    <link rel="stylesheet" href="css/index.css"/>
 </head>
 
 <body>
-
-
-    <!--Pavlo Semenyshyn -->
-    <!-- Lisnychuk Arsen -->
-    <!-- Turkevych Vitalii -->
-    <!-- Olkhovyk Anastasiia -->
-    <!-- Reznik Anastasiia -->
-    <!-- Вівчаренко Михайло -->
-    <!--Михайло Попович-->
-
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
         <nav class="header__nav">
