--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Cafe Website</title>
     <link rel="shortcut icon" type="image/png" href="img/header/shortcut-icon.png" sizes="96x96">
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
