--- a/index.html
+++ b/index.html
@@ -83,39 +83,46 @@
                 <p class="text__we-have">From strawberry to coconut, we have them all!</p>
             </div>
 
+            
             <div class="tastes__cards">
+                <div class="cards__button-arrow">
+                    <button class="button-arrow__button"><</button>
+                </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
+                    <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
                     <h3 class="ice-cream__name">Strawberry Gem</h3>
                     <p class="ice-cream__description">fruity and fresh</p>
-                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
+                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
+                    <img class="ice-cream__img" src="img/tastes/choco-ice-cream.png" alt="choco ice cream">
                     <h3 class="ice-cream__name">Choco & Hazelnut</h3>
                     <p class="ice-cream__description">rich sweet taste</p>
-                    <p class="ice-cream__price"><span>$ 5 </span> / ball</p>
+                    <p class="ice-cream__price"><span class="price__numbers">$ 5 </span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
+                    <img class="ice-cream__img" class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
                     <h3 class="ice-cream__name">Blue Paradise</h3>
                     <p class="ice-cream__description">sour and fruity</p>
-                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
+                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
+                    <img class="ice-cream__img" src="img/tastes/mongo-ice-cream.png" alt="mongo ice cream">
                     <h3 class="ice-cream__name">Mango Dream§</h3>
                     <p class="ice-cream__description">classic tropic taste</p>
-                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
+                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
+                    <img class="ice-cream__img" src="img/tastes/cream-nutty-flavor.png" alt="cream nutty flavor">
                     <h3 class="ice-cream__name">Pistachio Heaven</h3>
                     <p class="ice-cream__description">cream nutty flavor</p>
-                    <p class="ice-cream__price"><span>$ 5</span> / ball</p>
+                    <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
+                </div>
+                <div class="cards__button-arrow">
+                    <button class="button-arrow__button">></button>
                 </div>
             </div>
-            <a href="https://93qs8.weblium.site/menu">Show Me More</a>
+            <a class="tastes__button" href="https://93qs8.weblium.site/menu"><div class="button__text-style">Show Me More</div></a>
         </section>
         
         <!-- Вівчаренко Михайло --> 
