added fonts to global,

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
             <div class="tastes__cards">
                 <div class="cards__button-arrow">
-                    <button class="button-arrow__button"><</button>
+                    <button class="button-arrow__button"></button>
                 </div>
                 <div class="card__ice-cream">
                     <img class="ice-cream__img" src="img/tastes/strawberry-ice-cream.png" alt="strawberry ice cream">
@@ -119,7 +119,7 @@
                     <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
                 </div>
                 <div class="cards__button-arrow">
-                    <button class="button-arrow__button">></button>
+                    <button class="button-arrow__button"></button>
                 </div>
             </div>
             <a class="tastes__button" href="https://93qs8.weblium.site/menu"><div class="button__text-style">Show Me More</div></a>
