--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <p class="ice-cream__price"><span class="price__numbers">$ 5 </span> / ball</p>
                 </div>
                 <div class="card__ice-cream">
-                    <img class="ice-cream__img" class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
+                    <img class="ice-cream__img" src="img/tastes/blueberry-ice-cream.png" alt="blueberry ice cream">
                     <h3 class="ice-cream__name">Blue Paradise</h3>
                     <p class="ice-cream__description">sour and fruity</p>
                     <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
