--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
                     </div>
                 </div>
             </div>
+            <div class="wave-container">
+                <img class="wave-img" src="img/about-us/mobile wave.svg" alt="wave block separator">
+            </div>
         </section>
     </main>
 
