Fixed way to wave-img

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
             <div class="wave-container">
-                <img class="wave-img" src="img/about-us/mobile wave.svg" alt="wave block separator">
+                <img class="wave-img" src="img/blog/mobile-wave.svg" alt="wave block separator">
             </div>
         </section>
     </main>
