--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 
         <!-- Вівчаренко Михайло -->
         <section id="ingredients" class="ingredients">
-            <img class="ingredients__image" src="img/ingredients/ice-cream-ingredients.png" alt="ice cream ingredients">
+            <div class="ingredients__ice-cream">
+                <img class="ingredients__image" src="img/ingredients/ice-cream-ingredients.png"
+                    alt="ice cream ingredients">
+            </div>
 
             <div class="ingredients__content">
                 <h2 class="ingredients__title">Ingredients</h2>
@@ -147,8 +150,6 @@
                     course, lots of love! We use traditional recipes and state-of-the-art
                     technology to handcraft the most delicious ice cream in New York!</p>
             </div>
-
-
         </section>
 
 
