Added to blog section CSS style

--- a/index.html
+++ b/index.html
@@ -309,38 +309,39 @@
 
         <!-- Mykhailo Popovych-->
         <section class="blog" id="our-blog">
-            <div class="blog__text">
-                <h2 class="blog__title">Blog</h2>
-                <p class="blog__subtitle">Our Latest Articles</p>
-                <p class="blog__advice">Learn more about ice cream, our news, and special offers.</p>
-            </div>
-
-            <div class="blog__acticles-overview">
-                <div class="blog__article">
-                    <img src="img/blog/ice-cream-balls.png" alt="Tasty ice cream">
-                    <h3 class="blog__article-title">-15% Discount on 10 Tastes!</h3>
-                    <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top spring
-                        tastes until 10 june</p>
-                    <div class="blog__btn">
-                        <a href="#">Learn More</a>
-                    </div>
+            <div class="container">
+                <div class="blog__header">
+                    <h2 class="blog__title">Blog</h2>
+                    <p class="blog__subtitle">Our Latest Articles</p>
+                    <p class="blog__advice">Learn more about ice cream, our news, and special offers.</p>
                 </div>
-                <div class="blog__article">
-                    <img src="img/blog/ice-cream-enjoy.png" alt="People enjoing ice cream">
-                    <h3 class="blog__article-title">The History of Ice Cream</h3>
-                    <p class="blog__article-text">Many people know that the original ice cream comes from Italy. Here is
-                        the whole story...</p>
-                    <div class="blog__btn">
-                        <a href="#">Learn More</a>
+                <div class="blog__acticles-overview">
+                    <div class="blog__article">
+                        <img src="img/blog/ice-cream-balls.png" alt="Tasty ice cream">
+                        <h3 class="blog__article-title">-15% Discount on 10 Tastes!</h3>
+                        <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top spring
+                            tastes until 10 june</p>
+                        <div class="blog__btn btn">
+                            <a class="btn__text" href="#">Learn More</a>
+                        </div>
                     </div>
-                </div>
-                <div class="blog__article">
-                    <img src="img/blog/ice-cream-balls.png" alt="Ice cream composition">
-                    <h3 class="blog__article-title">Celebrate Birthdays with us!</h3>
-                    <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We have
-                        lots of sweet threats and fun.</p>
-                    <div class="blog__btn">
-                        <a href="#">Learn More</a>
+                    <div class="blog__article">
+                        <img src="img/blog/ice-cream-enjoy.png" alt="People enjoing ice cream">
+                        <h3 class="blog__article-title">The History of Ice Cream</h3>
+                        <p class="blog__article-text">Many people know that the original ice cream comes from Italy. Here is
+                            the whole story...</p>
+                        <div class="blog__btn btn">
+                            <a class="btn__text" href="#">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="blog__article">
+                        <img src="img/blog/ice-cream-composition.png" alt="Ice cream composition">
+                        <h3 class="blog__article-title">Celebrate Birthdays with us!</h3>
+                        <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We have
+                            lots of sweet threats and fun.</p>
+                        <div class="blog__btn btn">
+                            <a class="btn__text" href="#">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
