--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="header__nav-right">
                 <a href="#ingredients" class="header__nav-item">Ingredients</a>
-                <a href="#our-blog" class="header__nav-item">Blog</a>
+                <a href="#blog" class="header__nav-item">Blog</a>
                 <a href="#" class="header__nav-item">Contacts</a>
             </div>
         </nav>
@@ -315,7 +315,7 @@
         </section>
 
         <!-- Mykhailo Popovych-->
-        <section class="blog" id="our-blog">
+        <section class="blog" id="blog">
             <div class="container">
                 <div class="blog__header">
                     <h2 class="blog__title">Blog</h2>
