added media query to ingredients and some general changes

--- a/index.html
+++ b/index.html
@@ -129,27 +129,33 @@
 
         <!-- Вівчаренко Михайло -->
         <section id="ingredients" class="ingredients">
-            <div class="ingredients__ice-cream">
-                <img class="ingredients__image" src="img/ingredients/ice-cream-ingredients.png"
-                    alt="ice cream ingredients">
+
+            <div class="ingredients__items container">
+                <div class="ingredients__ice-cream">
+                    <img class="ingredients__image" src="img/ingredients/ice-cream-ingredients.png"
+                        alt="ice cream ingredients">
+                </div>
+
+                <div class="ingredients__content">
+                    <h2 class="ingredients__title">Ingredients</h2>
+                    <p class="ingredients__subtitle">100% Organic and Natural</p>
+                    <p class="ingredients__text">We use only natural ingredients in our ice cream and desserts.</p>
+
+                    <ul class="ingredients__listing">
+                        <li class="ingredients__list"> Farm milk from local households;</li>
+                        <li class="ingredients__list"> Berry and fruit pieces and whole fruit;</li>
+                        <li class="ingredients__list"> No chemical flavors or sweeteners.</li>
+                    </ul>
+
+                    <p class="ingredients__main-text">The recipe for good ice cream is simple: milk, cream, and fruit.
+                        And,
+                        of
+                        course, lots of love! We use traditional recipes and state-of-the-art
+                        technology to handcraft the most delicious ice cream in New York!</p>
+                </div>
+
             </div>
 
-            <div class="ingredients__content">
-                <h2 class="ingredients__title">Ingredients</h2>
-                <p class="ingredients__subtitle">100% Organic and Natural</p>
-                <p class="ingredients__text">We use only natural ingredients in our ice cream and desserts.</p>
-
-                <ul class="ingredients__listing">
-                    <li class="ingredients__list"> Farm milk from local households;</li>
-                    <li class="ingredients__list"> Berry and fruit pieces and whole fruit;</li>
-                    <li class="ingredients__list"> No chemical flavors or sweeteners.</li>
-                </ul>
-
-                <p class="ingredients__main-text">The recipe for good ice cream is simple: milk, cream, and fruit. And,
-                    of
-                    course, lots of love! We use traditional recipes and state-of-the-art
-                    technology to handcraft the most delicious ice cream in New York!</p>
-            </div>
         </section>
 
 
@@ -326,7 +332,8 @@
                     <div class="blog__article">
                         <img src="img/blog/ice-cream-balls.png" alt="Tasty ice cream">
                         <h3 class="blog__article-title">-15% Discount on 10 Tastes!</h3>
-                        <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top spring
+                        <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top
+                            spring
                             tastes until 10 june</p>
                         <div class="blog__btn btn">
                             <a class="btn__text" href="#">Learn More</a>
@@ -335,7 +342,8 @@
                     <div class="blog__article">
                         <img src="img/blog/ice-cream-enjoy.png" alt="People enjoing ice cream">
                         <h3 class="blog__article-title">The History of Ice Cream</h3>
-                        <p class="blog__article-text">Many people know that the original ice cream comes from Italy. Here is
+                        <p class="blog__article-text">Many people know that the original ice cream comes from Italy.
+                            Here is
                             the whole story...</p>
                         <div class="blog__btn btn">
                             <a class="btn__text" href="#">Learn More</a>
@@ -344,7 +352,8 @@
                     <div class="blog__article">
                         <img src="img/blog/ice-cream-composition.png" alt="Ice cream composition">
                         <h3 class="blog__article-title">Celebrate Birthdays with us!</h3>
-                        <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We have
+                        <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We
+                            have
                             lots of sweet threats and fun.</p>
                         <div class="blog__btn btn">
                             <a class="btn__text" href="#">Learn More</a>
