--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
                 <a href="#" class="header__nav-item">Contacts</a>
             </div>
         </nav>
-    </header>
-    <main>
         <section class="main-page">
-            <h1 class="main-page__title"><span>Welcome to</span>
+            <h1 class="main-page__title"><span>Welcome to</span><br>
                 Mr. Snowman Cafe
             </h1>
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
@@ -39,11 +37,12 @@
             <div class="main-page__about-cafe-button">
                 <a href="#" class="button-link">About Cafe</a>
             </div>
-            <div class="main-page__our-menu-button">
-                <a href="#menu" class="button-link">Our Menu</a>
+            <div class="main-page__our-menu-button blog__btn">
+                <a href="#menu" class="btn__text button-link">Our Menu</a>
             </div>
         </section>
-
+    </header>
+    <main>
         <!-- Pavlo Semenyshyn-->
         <section class="overview-menu">
             <div class="overview-desserts">
