removing button classes from header, add bootstrap links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cream Cafe Website</title>
     <link rel="shortcut icon" type="image/png" href="img/header/shortcut-icon.png" sizes="96x96">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -35,10 +37,10 @@
             <p class="main-page__sub-title">Handcrafting the most delicious ice cream since 1999.
             </p>
             <div class="main-page__about-cafe-button">
-                <a href="#" class="button-link">About Cafe</a>
+                <a href="#" class="about-cafe-link">About Cafe</a>
             </div>
-            <div class="main-page__our-menu-button blog__btn">
-                <a href="#menu" class="btn__text button-link">Our Menu</a>
+            <div class="main-page__our-menu-button">
+                <a href="#menu" class="button-link">Our Menu</a>
             </div>
         </section>
     </header>
@@ -402,7 +404,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
-
 
 </html>
