made html code for gallery and added main-btn to global.css

--- a/index.html
+++ b/index.html
@@ -304,6 +304,22 @@
         </section>
 
         <!-- Mykhailo Popovych-->
+        <section class="gallery">
+            <div class="container">
+                <div class="gallery__header">
+                    <h2 class="gallery__title">Gallery</h2>
+                    <p class="gallery__subtitle">Our Gallery</p>
+                    <p class="gallery__text">Ice cream and desserts are our real passion!</p>
+                </div>
+                <div class="gallery__photos">
+                    <img src="img/gallery/cafe-workers.png" alt="Cafe workers">
+                    <img src="img/gallery/tasty-ice-cream.png" alt="Client with ice cream">
+                    <img src="img/gallery/assortment.png" alt="Our assortment">
+                    <img src="img/gallery/ready-ice-cream.png" alt="Tasty ice cream">
+                    <img src="img/gallery/ice-cream-making.png" alt="ice cream making">
+                </div>
+            </div>
+        </section>
         <section class="blog" id="blog">
             <div class="container">
                 <div class="blog__header">
@@ -318,8 +334,8 @@
                         <p class="blog__article-text">Hurry up to use your discount! We offer special prices on top
                             spring
                             tastes until 10 june</p>
-                        <div class="blog__btn btn">
-                            <a class="btn__text" href="#">Learn More</a>
+                        <div class="main-btn">
+                            <a class="main-btn__text" href="#">Learn More</a>
                         </div>
                     </div>
                     <div class="blog__article">
@@ -328,8 +344,8 @@
                         <p class="blog__article-text">Many people know that the original ice cream comes from Italy.
                             Here is
                             the whole story...</p>
-                        <div class="blog__btn btn">
-                            <a class="btn__text" href="#">Learn More</a>
+                        <div class="main-btn">
+                            <a class="main-btn__text" href="#">Learn More</a>
                         </div>
                     </div>
                     <div class="blog__article">
@@ -338,8 +354,8 @@
                         <p class="blog__article-text">Mr. Snowman's Birthday Parties are great for kids of all ages. We
                             have
                             lots of sweet threats and fun.</p>
-                        <div class="blog__btn btn">
-                            <a class="btn__text" href="#">Learn More</a>
+                        <div class="main-btn">
+                            <a class="main-btn__text" href="#">Learn More</a>
                         </div>
                     </div>
                 </div>
