add yellow button in global css

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
                     <p class="ice-cream__price"><span class="price__numbers">$ 5</span> / ball</p>
                 </div>
             </div>
-            <a class="tastes__button" href="https://93qs8.weblium.site/menu">
-                <div class="button__text-style">Show Me More</div>
-            </a>
+            <div class="mask-yellow-button">
+                <a class="mask-yellow-button__block" href="https://93qs8.weblium.site/menu">
+                    <div class="block__text-style">Show Me More</div>
+                </a>
+            </div>
         </section>
 
         <!-- Вівчаренко Михайло -->
